@@ -5,25 +5,98 @@ default_style {
 		size:%(size)d;
 }
 
-number_style {
-		fore:#ED0088;
+array_style {
+		fore:#CC1313;
 }
 
-number2_style {
-		fore:#ED0088 bold;
+brace_bad {
+		fore:#000A87;
+		back:#FF0024;
 }
 
-stringeol_style {
-		fore:#000A87 bold;
-		back:#00CDCD eol;
+brace_good {
+		fore:#EEFFDD;
+		back:#0093FF;
+}
+
+btick_style {
+		fore:#008AC1;
+}
+
+calltip {
+		fore:#4D4D4D;
+		back:#009FFF;
+}
+
+char_style {
+        fore:#00CDCD;
+}
+
+class_style {
+		fore:#F33C33 bold;
+}
+
+class2_style {
+		fore:#F33C33;
 }
 
 comment_style {
 		fore:#9B9BA7;
 }
 
+ctrl_char {
+		fore:#000000;
+}
+
+decor_style {
+		fore:#00A709 italic;
+}
+
+directive_style {
+		fore:#00FFA2;
+}
+
+dockey_style {
+		fore:#80007B;
+}
+
+error_style {
+		fore:#000A87;
+		back:#FF0000;
+}
+
+folder_style {
+		fore:#FFEEDD;
+}
+
+funct_style {
+		fore:#DF5900 italic;
+}
+
+global_style {
+		fore:#00D00F bold;
+}
+
+guide_style {
+        fore: #FFEEDD;
+}
+
+here_style {
+		fore:#ED0088;
+		back:#121A97;
+}
+
+ideol_style {
+		fore:#FFDDEE;
+		back:#00F8FF eol;
+}
+
 keyword_style {
 		fore:#FFCF20;
+}
+
+keyword2_style {
+		fore:#00F639 bold;
 }
 
 keyword3_style {
@@ -34,126 +107,10 @@ keyword4_style {
 		fore:#0062AF bold;
 }
 
-ideol_style {
-		fore:#FFDDEE;
-		back:#00F8FF eol;
-}
-
-array_style {
-		fore:#CC1313;
-}
-
-global_style {
-		fore:#00D00F bold;
-}
-
 line_num {
 		fore:#FFEEDD;
 		back:#242787;
 		size:%(size3)d;
-}
-
-pre2_style {
-		fore:#EE5507;
-}
-
-string_style {
-        fore:#00CDCD;
-}
-
-class_style {
-		fore:#F33C33 bold;
-}
-
-ctrl_char {
-		fore:#000000;
-}
-
-marker_style {
-		fore:#000000;
-		back:#FFFFFF;
-}
-
-keyword2_style {
-		fore:#00F639 bold;
-}
-
-class2_style {
-		fore:#F33C33;
-}
-
-unknown_style {
-		fore:#000000;
-		back:#FF0000;
-}
-
-calltip {
-		fore:#4D4D4D;
-		back:#009FFF;
-}
-
-select_style {
-        back:#067B40;
-}
-
-scalar_style {
-		fore:#B037FF bold;
-}
-
-operator_style {
-		fore:#FFEEDD bold;
-}
-
-here_style {
-		fore:#ED0088;
-		back:#121A97;
-}
-
-regex_style {
-		fore:#00BFFF italic;
-		back:#000A87 bold;
-}
-
-folder_style {
-		fore:#FFEEDD;
-}
-
-pre_style {
-		fore:#EE5507 bold;
-}
-
-decor_style {
-		fore:#00A709 italic;
-}
-
-scalar2_style {
-		fore:#B037FF;
-}
-
-funct_style {
-		fore:#DF5900 italic;
-}
-
-brace_good {
-		fore:#EEFFDD;
-		back:#0093FF;
-}
-
-error_style {
-		fore:#000A87;
-		back:#FF0000;
-}
-
-directive_style {
-		fore:#00FFA2;
-}
-
-btick_style {
-		fore:#008AC1;
-}
-
-char_style {
-        fore:#00CDCD;
 }
 
 margin_style {
@@ -161,13 +118,60 @@ margin_style {
 		back:#FFFFFF;
 }
 
-brace_bad {
-		fore:#000A87;
-		back:#FF0024;
+marker_style {
+		fore:#000000;
+		back:#FFFFFF;
 }
 
-dockey_style {
-		fore:#80007B;
+number_style {
+		fore:#ED0088;
+}
+
+number2_style {
+		fore:#ED0088 bold;
+}
+
+operator_style {
+		fore:#FFEEDD bold;
+}
+
+pre_style {
+		fore:#EE5507 bold;
+}
+
+pre2_style {
+		fore:#EE5507;
+}
+
+select_style {
+        back:#067B40;
+}
+
+string_style {
+        fore:#00CDCD;
+}
+
+stringeol_style {
+		fore:#000A87 bold;
+		back:#00CDCD eol;
+}
+
+regex_style {
+		fore:#00BFFF italic;
+		back:#000A87 bold;
+}
+
+scalar_style {
+		fore:#B037FF bold;
+}
+
+scalar2_style {
+		fore:#B037FF;
+}
+
+unknown_style {
+		fore:#000000;
+		back:#FF0000;
 }
 
 whitespace_style {
